--- a/style.css
+++ b/style.css
@@ -1,6 +1,33 @@
+*{
+box-sizing:border-box;
+  font-family:'Lato',sans-serif;
+
+}
+html,body{
+width:100%;
+  height:100%;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background:#222;
+}
+.wrapper{
+  display:flex;
+  width:70%;
+  justify-content:space-around;
+}
 .card{
-transition:all 0.3s;
+width:280px;
+  height:360px;
+  padding:2rem 1 rem;
+  background:#fff;
+  position:relative;
+  display:flex;
+  align-items:flex-end;
+  box-shadow:0px 7px 10px aqua;
+  transitition:0.5s ease-in-out;
 }
 .card:hover{
-  transform:scale(1.15);
+transform:translate(20px);
+  
 }
