--- a/style1.css
+++ b/style1.css
@@ -4,7 +4,7 @@ background:#blue;
         height:80px;
         width:100%;
     }
-lable.logo{
+navbar-brand{
 color:white;
     font-size:35px;
     line-height:80px;
