--- a/style1.css
+++ b/style1.css
@@ -10,8 +10,7 @@ color:white;
     line-height:80px;
     pading: 0 100px;
     font-weight:bold;
-}
-nav ul li a{
+navbarNav ul li a{
 color:white;
     font-size:17px;
     text-transform:uppercase;
