--- a/style1.css
+++ b/style1.css
@@ -1,26 +1,166 @@
+  a{
+    color:chartreuse;
 
-    nav{
-background:#blue;
-        height:80px;
-        width:100%;
+   }
+a:hover{
+    color:coral;
+    text-decoration:none;
+}
+h1,h2,h3,h4,h5,h6{
+    font-family:"Roboto",sans-serif;
+}
+
+
+#header{
+    background:black;
+    padding:15px;
+}
+
+.nav-menu ul{
+    margin:0px;
+    padding:0px;
+    list-style:none;
+}
+.nav-menu>ul{
+    display:flex;
+}
+.nav-menu>ul>li{
+    position:relative;
+    white-space:nowrap;
+    padding:10px 0px 10px 22px;
+}
+
+
+.nav-menu a{
+
+    display:block;
+    position:relative;
+    color:hotpink;
+    transition: 0.7s;
+    font-size:14px;
+    font-weight:500px;
+    font-family:"Roboto",sans-serif;
+    padding: 0 4px;
+    text-decoration: uppercase;
+
+}
+
+.nav-menu a:hover::before,
+.nav-menu li:hover>a::before,
+.nav-menu .active>a::before{
+visibility: visible;
+
+width:100%;
+
+}
+.get-started-btn{
+
+    margin-left:25px;
+    color:white;
+    border-radius: 4px;
+    padding:6px 25px 8px 25px;
+    white-space:nowrap;
+    transition: 0.3s;
+    font-size: 13px;
+    display: inline-block;
+    font-weight: 400;
+    font-family:"poppins",sans-serif;
+    border:2px solid red;
+}
+@media (max-width:744px) {
+    .get-started-btn{
+        margin:0 48px 0 0;
+        padding:6px 18px;
     }
-a.navbar-brand{
-color:white;
-    font-size:35px;
-    line-height:80px;
-    pading: 0 100px;
-    font-weight:bold;
-navbarNav ul li a{
-color:white;
-    font-size:17px;
-    text-transform:uppercase;
-    border-radius:3px;
 }
-a.active,a:hover{
-background:#1b9bff;
-    transition:.6s;
-    
+
+.mobile-nav-toggle{
+    position:fixed;
+    top:18px;
+    right:15px;
+    z-index:9998;
+    background: none;
+    font-size:24px;
+    transition: all 0.4s;
+    line-height:1;
+    cursor:pointer;
+    text-align: right;
 }
+.mobile-nav-toggle i{
+    color:mediumorchid;
+
+}
+
+.mobile-nav{
+    position:fixed;
+    top:55px;
+    right:15px;
+    left: 15px;
+    bottom:15px;
+    overflow: auto;
+    background: white;
+    z-index: 9999;
+    transition: ease-in-out o.2s;
+    opacity: 0;
+    visibility: hidden;
+    border-radius: 10px;
+    padding: 10px 0;
+}
+
+.mobile-nav-overly{
+    width:100%;
+    height: 100%;
+    z-index: 9997;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: burlywood;
+    overflow: hidden;
+    display: none;
+    transition: ease-in-out 0.2s;
+
+}
+
+.mobile-nav-active{
+
+    overflow: hidden;
+}
+.mobile-nav-active.mobile-nav{
+opacity: 1;
+visibility: visible;
+
+}
+.mobile-nav *{
+    margin:0;
+    padding: 0;
+    list-style: none;
+}
+.mobile-nav a{
+    display: block;
+    position: relative;
+    color: mediumspringgreen;
+    padding: 10px 20px;
+    font-weight: 500;
+    outline: none;
+    font-size: 15px;
+}
+.mobile-nav a:hover,
+.mobile-nav.active>a,
+.mobile-nav li:hover>a{
+    color: crimson;
+    text-decoration: fuchsia;
+}
+.mobile-nav a:hover{
+    background: black;
+    border:2px solid black;
+    font-size: 19px;
+}
+
+
+
+
+
+
     .card{
     width:100%px;
       height:100%;
