--- a/style1.css
+++ b/style1.css
@@ -1,5 +1,5 @@
   a{
-    color:chartreuse;
+    color:#99FFCC;
 
    }
 a:hover{
@@ -29,8 +29,6 @@ h1,h2,h3,h4,h5,h6{
     white-space:nowrap;
     padding:10px 0px 10px 22px;
 }
-
-
 .nav-menu a{
 
     display:block;
@@ -42,7 +40,6 @@ h1,h2,h3,h4,h5,h6{
     font-family:"Roboto",sans-serif;
     padding: 0 4px;
     text-decoration: uppercase;
-
 }
 
 .nav-menu a:hover::before,
