--- a/style1.css
+++ b/style1.css
@@ -1,5 +1,5 @@
-  a{
-    color:#99FFCC;
+ a{
+    color:chartreuse;
 
    }
 a:hover{
@@ -29,7 +29,10 @@ h1,h2,h3,h4,h5,h6{
     white-space:nowrap;
     padding:10px 0px 10px 22px;
 }
+
+
 .nav-menu a{
+
     display:block;
     position:relative;
     color:hotpink;
@@ -39,6 +42,7 @@ h1,h2,h3,h4,h5,h6{
     font-family:"Roboto",sans-serif;
     padding: 0 4px;
     text-decoration: uppercase;
+
 }
 
 .nav-menu a:hover::before,
@@ -151,6 +155,7 @@ visibility: visible;
     border:2px solid black;
     font-size: 19px;
 }
+
 
 
 
