--- a/style1.css
+++ b/style1.css
@@ -63,7 +63,7 @@ width:100%;
     font-family:"poppins",sans-serif;
     border:2px solid red;
 }
-@media (max-width:470px) {
+@media (max-width:600px) {
     .get-started-btn{
         margin:0 48px 0 0;
         padding:6px 18px;
@@ -75,9 +75,11 @@ width:100%;
     top:18px;
     right:15px;
     z-index:9998;
+ border:0;
     background: none;
     font-size:24px;
     transition: all 0.4s;
+ outline:none !important;
     line-height:1;
     cursor:pointer;
     text-align: right;
