--- a/style1.css
+++ b/style1.css
@@ -50,7 +50,6 @@ width:100%;
 
 }
 .get-started-btn{
-
     margin-left:25px;
     color:white;
     border-radius: 4px;
@@ -63,13 +62,17 @@ width:100%;
     font-family:"poppins",sans-serif;
     border:2px solid red;
 }
+.get-started-btn{
+background:#79e71f;
+ color:white;
+}
+
 @media(max-width:450px) {
     .get-started-btn{
         margin:0 48px 0 0;
         padding:6px 18px;
     }
 }
-/*mobile nav menu*/
 .mobile-nav-toggle{
     position:fixed;
     top:18px;
@@ -95,7 +98,7 @@ width:100%;
     right:15px;
     left: 15px;
     bottom:15px;
-    overflow: auto;
+    overflow-y: auto;
     background: white;
     z-index: 9999;
     transition: ease-in-out o.2s;
