--- a/style1.css
+++ b/style1.css
@@ -67,11 +67,26 @@ background:#79e71f;
  color:white;
 }
 
-@media(max-width:450px) {
+@media(max-width:550px) {
     .get-started-btn{
         margin:0 48px 0 0;
         padding:6px 18px;
     }
+
+.mobile-nav-toggle{
+    position:fixed;
+    top:18px;
+    right:15px;
+    z-index:9998;
+ border:0;
+    background: none;
+    font-size:24px;
+    transition: all 0.4s;
+ outline:none;
+    line-height:1;
+    cursor:pointer;
+    text-align: right;
+ 
 }
 .mobile-nav-toggle{
     position:fixed;
