--- a/style1.css
+++ b/style1.css
@@ -13,8 +13,8 @@ h1,h2,h3,h4,h5,h6{
     padding:15px;
 }
 .nav-menu ul{
-    margin:0px;
-    padding:0px;
+    margin:0;
+    padding:0;
     list-style:none;
 }
 .nav-menu>ul{
@@ -47,8 +47,8 @@ h1,h2,h3,h4,h5,h6{
 visibility: visible;
 
 width:100%;
-
 }
+
 .get-started-btn{
     margin-left:25px;
     color:white;
@@ -62,8 +62,8 @@ width:100%;
     font-family:"poppins",sans-serif;
     border:2px solid red;
 }
-.get-started-btn{
-background:#79e71f;
+.get-started-btn:hover{
+background:yellow;
  color:white;
 }
 
